<resources>
    <string name="app_name">FGOAP</string>

    <!--- UI -->
    <string name="actionBarTitle">Fate/AP calculator</string>
    <string name="currentApTextView">Current AP</string>
    <string name="desiredApTextView">Desired AP</string>
    <string name="maxApTextView">Maximum AP</string>
    <string name="editTextHint">Enter values here</string>
    <string name="confirmButton">Confirm</string>

    <!--- Messages -->
    <string name="invalidInputMessage">Invalid input, please input numbers only.</string>
    <string name="currentTime">Current time:&#160;</string>
    <string name="timeToDesired">Time till Desired AP:&#160;</string>
    <string name="timeAtDesired">Time at Desired AP:&#160;</string>
    <string name="timeToMax">Time till Maximum AP:&#160;</string>
    <string name="timeAtMax">Time at Maximum AP:&#160;</string>
    <string name="projectedAp">Projected AP:&#160;</string>

    <!--- Notifications -->
    <string name="desiredNotifTitle">Let\'s go, Master.</string>
    <string name="desiredNotifText">Desired AP restored.</string>
    <string name="maxNotifTitle">All AP restored.</string>
    <string name="maxNotifText">Let\'s not waste AP, right?</string>

    <!--- Other -->
    <string name="notificationChannel">AP Reminders</string>
</resources>
